[package]
name = "billow"
version = "0.1.0"
edition = "2021"
authors = ["MrMarble"]
description = "Simple Wave Function Collapse implementation in Rust"

[features]
default = ["image"]
image = ["dep:image"]
bevy = ["dep:bevy"]

[dependencies]
rand = "0.8.5"
sha2 = "0.10.2"
image = {version= "0.24.3", optional = true}
bevy = {version = "0.8.1", optional = true}
gif = "0.11.4"
rayon = "1.5.3"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "wave"
harness = false
